--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Lumo",
-    "slug": "LumoApp",
+    "slug": "Lumo",
     "privacy": "public",
     "sdkVersion": "35.0.0",
     "platforms": [
