--- a/package.json
+++ b/package.json
@@ -8,18 +8,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "babel-plugin-module-resolver": "^3.2.0",
     "expo": "^35.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.3.0",
-    "react-native-web": "^0.11.7",
-    "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.9.0"
+    "react-native-web": "^0.11.7"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.0.0"
+    "@types/react": "^16.8.23",
+    "@types/react-native": "^0.57.65",
+    "babel-preset-expo": "^7.1.0",
+    "typescript": "^3.6.3"
   },
   "private": true
 }
