--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "^35.0.0",
     "expo-barcode-scanner": "^7.0.0",
     "expo-camera": "~7.0.0",
+    "expo-localization": "~7.0.0",
     "install": "^0.13.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
