--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.7.0",
+    "axios": "^0.19.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "expo": "^35.0.0",
     "expo-barcode-scanner": "^7.0.0",
     "expo-camera": "~7.0.0",
     "expo-localization": "~7.0.0",
     "install": "^0.13.0",
+    "mobx": "^5.15.0",
+    "mobx-react": "^6.1.4",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
