--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "expo-camera": "~7.0.0",
     "expo-localization": "~7.0.0",
     "install": "^0.13.0",
-    "mobx": "^5.15.0",
-    "mobx-react": "^6.1.4",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
@@ -28,6 +26,7 @@
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.2",
+    "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
