--- a/package.json
+++ b/package.json
@@ -10,24 +10,38 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.7",
+    "@react-navigation/drawer": "^5.1.1",
+    "@react-navigation/native": "^5.0.9",
+    "@react-navigation/stack": "^5.1.1",
+    "@unimodules/core": "^5.0.0",
+    "@unimodules/react-native-adapter": "^5.0.0",
     "axios": "^0.19.2",
+    "expo-barcode-scanner": "^8.0.0",
+    "expo-constants": "^8.0.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-navigation": "^4.2.2",
-    "react-navigation-drawer": "^2.4.2",
-    "react-navigation-stack": "^2.2.2",
+    "react-native-gesture-handler": "^1.6.0",
+    "react-native-localize": "^1.3.3",
+    "react-native-modal": "^11.5.4",
+    "react-native-permissions": "^2.0.9",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.2.0",
+    "react-native-switch": "^1.5.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "unimodules-permissions-interface": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^0.0.5",
     "@types/jest": "^24.0.24",
     "@types/react-native": "^0.60.25",
+    "@types/react-redux": "^7.1.7",
     "@types/react-test-renderer": "16.9.1",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
