--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
     "@react-navigation/drawer": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
-    "@unimodules/core": "^5.0.0",
-    "@unimodules/react-native-adapter": "^5.0.0",
     "axios": "^0.19.2",
-    "expo-barcode-scanner": "^8.0.0",
     "expo-constants": "^8.0.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-camera": "^3.19.0",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-localize": "^1.3.3",
     "react-native-modal": "^11.5.4",
@@ -32,8 +30,7 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "unimodules-permissions-interface": "^5.0.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
